feat: CRI support configure https registry for #286
